--- a/custom_components/divoom_pixoo/manifest.json
+++ b/custom_components/divoom_pixoo/manifest.json
@@ -4,12 +4,14 @@
   "codeowners": ["@KoenDierckx"],
   "config_flow": true,
   "dependencies": [],
-  "documentation": "https://www.home-assistant.io/integrations/divoom_pixoo",
+  "documentation": "https://github.com/KoenDierckx/divoompixoo",
+  "issue_tracker": "https://github.com/KoenDierckx/divoompixoo/issues",
   "homekit": {},
   "integration_type": "device",
   "iot_class": "local_polling",
   "loggers": [],
   "requirements": ["bidict==0.23.0"],
   "ssdp": [],
+  "version": "0.0.1",
   "zeroconf": []
 }
